KYLIN-1356 increase memory settings for failsafe